[package]
name = "htp"
version = "0.4.1"
authors = ["PicoJr <picojr_dev@gmx.com>"]
edition = "2018"
repository = "https://github.com/PicoJr/htp"
description = "human time parser"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["human", "time", "parser", "chrono"]
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.0"
pest_derive = "2.0"
thiserror = "1.0.20"
chrono = "0.4.12"

# https://github.com/rust-lang/rust/issues/88791
[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples=examples"]
